loSpazio - versione senza figure

--- a/Materiali/loSpazio/tex/main.tex
+++ b/Materiali/loSpazio/tex/main.tex
@@ -26,12 +26,14 @@
 \setcounter{totalnumber}{5}
 \restylefloat{figure}
 \begin{document}
-\section*{Gli eventi nello spazio}
+\section*{Elementi di geometria dello spazio}
 \input{superficieIrregolare}
-\input{fisicaEGeometria}
+
+\subsection*{Lo spazio e la Fisica}
+\input{loSpazioElaFisica}
+\input{iVettori}
 \input{ilPianoCartesiano}
-\input{leOperazioniConIVettori}
-\input{ilCoefficienteAngolare}
-\input{laMisuraDegliAngoli}
-\input{leCoordinatePolari}
-\end{document}
+\input{leDirezioniEleRette}
+\input{gliAngoli}
+\input{definizioni}
+\end{document}
