--- a/Materiali/loSpazio/tex/superficieIrregolare.tex
+++ b/Materiali/loSpazio/tex/superficieIrregolare.tex
@@ -2,6 +2,6 @@
  \centering
  \includegraphics[width=.7\textwidth]{../immagini/superficieIrregolare.png}
  % superficieIrregolare.png
- \label{fig:superficieIrregolare}
+ \label{fig:figura provvisoria di riempimento}
 \end{figure}
 
