--- a/Materiali/loSpazio/tex/ilPianoCartesiano.tex
+++ b/Materiali/loSpazio/tex/ilPianoCartesiano.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Il piano Cartesiano}
 
-La scomposizione di un vettore può avvenire usando un qualunque sistema di assi, ma è comodo usare una coppia di {\bfseries rette ortogonali}. Se invece si lavora sull'insieme dei punti dello spazio, sarà necessario usare tre direttrici, che prendono il nome di {\bfseries terna cartesiana} \footnote{oppure terna ortogonale}.\newline
-un sistema di assi cartesiani conferisce allo spazio una struttura di riferimento, che è molto utile nella rappresentazione dei vettori.
+Come abbiamo visto in precedenza, la scomposizione di un vettore è un operazione applicabile a qualunque sistema di assi, ma di solito è comodo usare una coppia di {\bfseries rette ortogonali}. Se invece si lavora sull'insieme dei punti dello spazio, sarà necessario usare tre direttrici, che prendono il nome di {\bfseries terna cartesiana} \footnote{oppure terna ortogonale}.\newline
+Un sistema di assi cartesiani conferisce allo spazio una struttura di riferimento, che è di grande utilità per eseguire operazioni sui vettori.
  
 Ogni vettore $ \vec{v}$ del piano, infatti, può essere scomposto in un modo unico in due componenti, in modo che sia:
 \begin{center}
