--- a/Materiali/loSpazio/tex/loSpazioElaFisica.tex
+++ b/Materiali/loSpazio/tex/loSpazioElaFisica.tex
@@ -1,10 +1,16 @@
 \subsubsection*{Lo Spazio, tra Fisica e Geometria}
 
-Molti storici della Fisica sostengono che i primi studiosi ad occuparsi di Fisica in un modo paragonabile a quello dei nostri scienziati contemporanei siano stati i filosi ellenistici della Grecia antica.
-Infatti, per loro, la cosidetta Geometria Euclide era, al tempo stesso, una {\bfseries teoria assiomatica} \footnote{elaborazione matematica fondata su un insieme di ipotesi astratte} e un'attività concreta di esplorazione delle proprietà dello spazio fisico. Per accettare la dimostrazione di un teorema i Greci {\slshape pretendevano} che il procedimento potesse essere visualizzato facendo uso di qualche strumento concreto, ed erano talmente fedeli a questa regola operativa che la loro è stata chiamata anche ``Geometria con riga e compasso''. 
+Molti storici della Fisica sostengono che i primi studiosi ad occuparsi di Fisica, dimostrando uno spirito scientifico metodologicamente appropriato, siano stati i filosi ellenistici della Grecia antica.
+Infatti, per loro, la cosidetta Geometria Euclidea era, al tempo stesso, una {\bfseries teoria assiomatica} \footnote{elaborazione matematica fondata su un insieme di ipotesi astratte} e un'attività concreta di esplorazione delle proprietà dello spazio {\slshape fisico}. Per accettare la dimostrazione di un teorema i Greci {\slshape pretendevano} che il procedimento potesse essere riprodotto concretamente con l'uso di qualche strumento reale, ed erano talmente fedeli a questa regola operativa che la loro è stata chiamata anche ``Geometria con riga e compasso''. 
 \newline
 
-Anche oggi, la Fisica mantiene questo atteggiamento, cercando di stabilire un confronto tra gli enti astratti della Geometria e le proprietà dello spazio reale. Per fare un esempio, se si domandasse ad un Fisico moderno di indicare un oggetto simile ad una retta, egli suggerirebbe quasi sicuramente di pensare ad un raggio di luce che viaggia nel vuoto.
+Per fare un esempio, riflettiamo su una operazione molto semplice, come la ricerca della bisettrice di un angolo. Per realizzarla, i matematici greci staccavano due segmenti identici sulle semirette che delimitavano l'angolo, usando un compasso. Quindi, sempre con l'uso del compasso, determinavano il punto medio tra gli estermi dei segmenti appena trovati. Infine, chiamavano bisettrice la retta che conteneva questo punto medio e il vertice del triangolo. Solo a questo punto, {\bfseries dopo} aver constatato l'esistenza fisica della bisettrice così trovata, ne studiavano le proprietà, dimostrata che divideva l'angolo in due parti uguali.\newline
+A volte, questo rigore metodologico creava delle difficoltà. Per esempio, i matematici greci non sono mai riusciti ad eseguire la divisione in tre parti uguali di un angolo arbitrario \footnote{oggi sappiamo che si tratta di una operazione impossibile, con la riga e il compasso} e di conseguenza nutrivano dei dubbi insanabili sul concetto di divisibilità di un angolo.
+\newline
+
+Anche oggi la Fisica, si mantiene fedele allo spirito originale dei filosofi greci, cercando di stabilire un confronto tra gli enti astratti della Geometria e le proprietà dello spazio reale.\newline
+Prendiamo ad esempio un ente fondamentale della geometria, come può essere una retta.
+Quale può essere l'oggetto fisico più adatto a rappresentarla? Per uno scienziato moderno, si potrebbe sicuramente indicare il raggio di luce mentre viaggia nel vuoto.
 \newline
 
 Non sempre, però, il comportamento della luce si adegua alle regole della Geometria Euclidea. Esistono alcuni fenomeni nei quali la luce segue percorsi un po' sorprendenti. Consideriamo ad esempio il fenomeno dell'eclissi totale di Sole.
