--- a/Materiali/loSpazio/tex/main.tex
+++ b/Materiali/loSpazio/tex/main.tex
@@ -27,7 +27,7 @@
 \restylefloat{figure}
 \begin{document}
 \section*{Elementi di geometria dello spazio}
-\input{superficieIrregolare}
+%\input{immagineIntroduttiva}
 
 \subsection*{Lo spazio e la Fisica}
 \input{loSpazioElaFisica}
@@ -35,5 +35,5 @@
 \input{ilPianoCartesiano}
 \input{leDirezioniEleRette}
 \input{gliAngoli}
-\input{definizioni}
+%\input{definizioni}
 \end{document}
