--- a/Materiali/loSpazio/tex/gliAngoli.tex
+++ b/Materiali/loSpazio/tex/gliAngoli.tex
@@ -1,10 +1,11 @@
 \subsubsection*{Gli angoli e la goniometria}
 
-Il coefficiente angolare è uno strumento per misurare un angolo.\newline
-Infatti, maggiore è il valore del coefficiente angolare, maggiore sarà l'inclinazione della retta corrispondentei. misurata a partire dall'asse delle ascisse.
+In un certo senso, il coefficiente angolare è uno strumento di misura degli angoli.\newline
+Infatti, maggiore è il valore del coefficiente angolare, maggiore sarà l'inclinazione della retta corrispondente, misurata a partire dall'asse delle ascisse.
 \newline
 
-Tuttavia, se noi raddoppiamo il valore del coefficiente angolare di una retta, non possiamo affermare di aver raddoppiato l'ampiezza dell'angolo formato con l'asse delle ascisse. Si dice pertanto che il coefficiente angolare non rappresenta una {\slshape misura lineare} degli angoli.\newline
+Tuttavia, se raddoppiamo il valore del coefficiente angolare di una retta, non possiamo affermare di aver raddoppiato l'ampiezza dell'angolo formato con l'asse delle ascisse. Si dice pertanto che il coefficiente angolare non rappresenta una {\slshape misura lineare} dell'angolo.\newline
+In questo paragrafo cercheremo di riflettere sui modi diversi per misurare gli angoli e sulla relazione tra queste misure e certe proprietà geometriche dello spazio, come ad esempio il coefficiente angolare.
 
 Le calcolatrici commerciali utilizzano tre unità di misura differenti per misurare gli angoli:
 \begin{itemize}
@@ -14,15 +15,16 @@ Le calcolatrici commerciali utilizzano tre unità di misura differenti per misur
 \end{itemize}
 
 Dato un settore circolare, si definisce misura in radianti dell'angolo corrispondente il rapporto tra la lunghezza dell'arco di circonferenza sotteso e la misura del raggio. Siccome tutti i settori circolari costruiti sullo stesso angolo sono figure simili, il rapporto descritto è una costante, e quindi costituisce una proprietà caratteristica dell'angolo dato.
-\newline.
+\newline
 
 L'arco sotteso da un angolo piatto è lungo circa 3 volte il raggio. Pertanto misura circa 3 radianti. Esattamente $\pi\, rad$.\newline
 Un angolo di sessanta gradi sessagesimali, che corrisponde al vertice del triangolo equilatero, misura $\frac \pi 3\, rad$.\newline
 L'angolo di trenta gradi, infine, misura $\frac \pi 6\, rad$.
 \newline
 
-È importante riconosce la relazione tra gli angoli e le proporzioni delle figure geometriche, almeno nei casi più comuni.\newline
-Per esempio, consideriamo la metà di un triangolo equilatero. Si tratta di un triangolo che possiede un angolo di trenta gradi, uno di sessanta e uno di trenta.\newline
+È importante riconoscere la relazione tra gli angoli e le proporzioni delle figure geometriche, almeno nei casi più comuni.\newline
+Per esempio, consideriamo la metà di un triangolo equilatero. Si tratta di un triangolo che possiede un angolo di novanta gradi, uno di sessanta \footnote{
+L'angolo di sessanta gradi era considerato dai filosofi greci come un angolo {\bf \slshape notevole}, perché corrispondeva alla divisione di un angolo piatto in tre parti uguali. Come abbiamo osservato in precedenza, la divisione in tre parti uguali era un'operazione critica, con gli strumenti fisici dei matematici greci.} e uno di trenta.\newline
 Il cateto più corto, cioè quello opposto all'angolo minore, che vale trenta gradi, misura esattamente la metà dell'ipotenusa.\newline
 Il più lungo, che è adiacente all'angolo minore, può essere trovato usando il teorema di Pitagora:
 \begin{center}
@@ -75,3 +77,21 @@ deg & rad & cos($\alpha$) & sen($\alpha$) & tg($\alpha$) \\
 \hline
 \end{tabular}
 \end{center}
+
+Nella tabella sono riportati i valori di seno, coseno e tangente degli angoli notevoli tra $0$ e $\pi$.
+\newline
+
+In generale, però, la funzione seno può essere valutata per qualunque angolo. In questo caso, però, è necessario fare uso di una calcolatrice, perché i calcoli necessari sarebbero troppo complicati \footnote{si dice che le funzioni goniometriche seno, coseno e tangente sono funzioni trascendenti.}. Prima di usare la calcolatrice, assicuratevi di impostare correttamente le unità di misura, facendovi aiutare dal'insegnante \footnote{ogni modello di calcolatrice usa impostazioni diverse.}.\newline
+
+Alle volte, inoltre è necessario eseguire l'operazione inversa. Supponiamo, ad esempio, di trattare con un triangolo che possiede un lato di 3 unità, uno di 4 e uno di 5.\newline
+Dopo aver verificato che si tratta di un triangolo rettangolo, detto $\alpha$ l'angolo minore di questo triangolo, risulterà:\begin{center}
+\begin{math}
+sen(\alpha)=\frac 3 5 ;\ cos(\alpha)=\frac 4 5\ e\ tg(\alpha)=\frac 3 4
+\end{math}
+\end{center}
+Come è possibile ricavare, da questi valori, la misura dell'angolo $\alpha$?\newline
+A questo scopo è necessario usare le cosidette funzioni goniometriche inverse, che si chiamano rispettivamente arcoseno, arcocoseno e arcotangente. Sulle calcolatrici scientifiche sono identificate dai simboli $\mathbf {sen^{-1};\ cos^{-1};\ e\ tg^{-1}}$.
+\newline
+
+A volte però, l'uso della calcolatrice può creare degli inganni. Supponiamo di lavorare con un angolo ottuso. Inserendo nella calcolatrice il valore del seno (per esempio $\frac 3 5$) risulterà impossibile ottenere il valore originale dell'angolo cercato, perchè la calcolatrice è impostata per restituire un angolo acuto. In questi casi, di conseguenza, bisogna adattare la risposta della calcolatrice alla situazione concreta.\newline
+Se la calcolatrice restituisce $arcsen(\frac 3 5 )=0,64 rad$, l'angolo ottuso su cui stiamo lavorando varrà $\pi - arcsen(\frac 3 5)=2,50 rad$. Discutete con l'insegnante i casi in cui possono capitare queste situazioni e il modo corretto di gestirle.
