--- a/Materiali/loSpazio/tex/leDirezioniEleRette.tex
+++ b/Materiali/loSpazio/tex/leDirezioniEleRette.tex
@@ -3,14 +3,14 @@
 Un'operazione molto importante, per muoversi nello spazio, è saper controllare la direzioni.\newline
 Come esercizio introduttivo, cominciamo a rappresentare sul piano cartesiano una successione di punti con la procedura sotto descritta:
 \begin{enumerate}
-\item {Scegliamo un punto iniziale a piacere. Per esempio il punto $\mathbf {(-2;-5)}$;}
-\item {Partendo dal punto precedente, spostiamoci di due unità in orizzontale, senza segnare alcun punto;}
-\item {Di seguito, spostiamoci di tre unità orizzontale e segniamo un secondo punto;}
-\item {ritorniamo al punto 2.}
+\item {scegliamo un punto iniziale a piacere. Per esempio il punto $\mathbf {(-2;-5)}$;}
+\item {partendo dal punto precedente, spostiamoci di due unità in orizzontale, senza segnare alcun punto;}
+\item {di seguito, spostiamoci di tre unità orizzontale e segniamo un secondo punto;}
+\item {ripetiamo le operazioni precedenti dal passo 2.}
 \end{enumerate}
 Sarà facile verificare che, in questo modo, si ottiene una successione di punti allineati lungo una retta.\newline
 
-Perché è accaduto così? In verità, non si è trattato di un caso, ma di un fenomeno ben riproducibile.\newline
+Perché proprio una retta? In verità, non è stato per caso, ma ciò che è accaduto è un fenomeno ben riproducibile.\newline
 Tracciate infatti una retta inclinata su un foglio bianco, ben squadrato.\newline
 Contrassegnate, su questa retta, cinque o sei punti, non necessariamente equidistanti e nominateli indicizzandoli opportunamente \footnote{chiamateli ad esempio $P_1=(x_1;y_1),P_2=(x_2;y_1),...$ }.\newline
 Scegliete tre o quattro coppie di questi punti, non necessariamente consecutivi.\newline
@@ -33,7 +33,7 @@ m = \frac{\Delta y}{\Delta x}
 \end{equation}
 \end{center}
 
-Come esercizio, provate a generare una successione di rette con la tecnica indicata all'inizio di questo parametro e a valutare il corrispondente coefficiente angolare.\newline
+Come esercizio, provate a generare una successione di rette con la tecnica indicata all'inizio di questo paragrafo e a valutare il corrispondente coefficiente angolare.\newline
 Provate anche a tracciare alcune rette con valori predeterminati di {\slshape m}. Per esempio: {\slshape m} $= 1$ {\slshape m}$ = 2$, {\slshape m} $= 3$, {\slshape m}$ = -2$.\newline
 Cosa potete osservare?
 \newline
@@ -58,7 +58,6 @@ Ora, per ogni punto generico $P = (x;y)$ della retta data, risulta:
 \Delta_y = y - y_0
 \end{math}
 \end{center}
-
 \begin{center}
 \begin{math}
 \Delta_x = x - x_0
@@ -67,7 +66,7 @@ Ora, per ogni punto generico $P = (x;y)$ della retta data, risulta:
 Quindi:
 \begin{center}
 \begin{equation}\label{eq:equazioneDellaRetta}
-y = y_0 + m \Delta_x
+y = y_0 + m (x -x_0)
 \end{equation}
 \end{center}
 Quest'ultima espressione è detta equazione della retta e permette di ricavare l'ordinata di ciascun punto in funzione della propria ascissa.
