correzione tabella angoli

--- a/Materiali/loSpazio/tex/gliAngoli.tex
+++ b/Materiali/loSpazio/tex/gliAngoli.tex
@@ -59,19 +59,19 @@ deg & rad & cos($\alpha$) & sen($\alpha$) & tg($\alpha$) \\
 \hline
 0 & 0 & 0 & 1 & 0 \\
 \hline
-30° & $\frac \pi 6$ & $\frac 1 2$ & $\frac {\sqrt 3} 2$ & $\frac {\sqrt 3} 3$ \\
+30° & $\frac \pi 3$ & $\frac {\sqrt 3} 2$ & $\frac 1 2$ & $\sqrt 3$ \\
 \hline
 45° & $\frac \pi 4$ & $\frac {\sqrt 2} 2$ & $\frac {\sqrt 2} 2$ & $1$ \\
 \hline
-60° & $\frac \pi 3$ & $\frac {\sqrt 3} 2$ & $\frac 1 2$ & $\sqrt 3$ \\
+60° & $\frac \pi 6$ & $\frac 1 2$ & $\frac {\sqrt 3} 2$ & $\frac {\sqrt 3} 3$ \\
 \hline
 90° & $\frac \pi 2$ & $1$ & $0$ & $\nexists$ \\
 \hline
 120° & $\frac {2 \pi} 3$ & $-\frac 1 2$ & $\frac {\sqrt 3} {2}$ & $-\sqrt 3$ \\
 \hline
-135° & $\frac {3 \pi} 4$ & $-\frac {sqrt 2} 2$ & $\frac {\sqrt 2} {2}$ & $-1$ \\
+135° & $\frac {3 \pi} 4$ & $-\frac {\sqrt 2} 2$ & $\frac {\sqrt 2} {2}$ & $-1$ \\
 \hline
-150° & $5 \frac \pi 6$ & $-\frac {sqrt 3} 2$ & $\frac 1 2$ & -$\frac {\sqrt 3} {3}$ \\
+150° & $5 \frac \pi 6$ & $-\frac {\sqrt 3} 2$ & $\frac 1 2$ & -$\frac {\sqrt 3} {3}$ \\
 \hline
 180° & $\pi $ & $-1$ & $0$ & $0$ \\
 \hline
