--- a/Materiali/velocita/tex/main.tex
+++ b/Materiali/velocita/tex/main.tex
@@ -31,4 +31,6 @@
 
 \subsection*{Il moto lineare uniforme}
 \input{spazioETempo}
+\input{velocitaETempo}
+\input{velocitaIstantanea}
 \end{document}
