--- a/Materiali/causeDelMoto/tex/ilCoefficienteDiAttrito.tex
+++ b/Materiali/causeDelMoto/tex/ilCoefficienteDiAttrito.tex
@@ -6,6 +6,6 @@ L'attrito tra due corpi è tanto maggiore quanto più essi sono compressi l'uno 
 
 \begin{center}
 \begin{equation}
-\mi = \frac {a_a}{a_{perp}}
+\mu = \frac {a_a}{a_{\perp}}
 \end{equation}
 \end{center}
