--- a/Materiali/causeDelMoto/tex/main.tex
+++ b/Materiali/causeDelMoto/tex/main.tex
@@ -35,4 +35,6 @@
 \input{analisiDeiDati}
 \input{gravitaEAttrito}
 \input{ilPianoInclinato}
+\input{ilCoefficienteDiAttrito}
+\input{esercizioConclusivo}
 \end{document}
